docs/envoy/v1.21.2/_sources/api-v3/extensions/filters/http/aws_request_signing/v3/aws_request_signing.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/http/aws_request_signing/v3/aws_request_signing.proto:

AwsRequestSigning
=================


This documentation is for the Envoy v3 API.

As of Envoy v1.18 the v2 API has been removed and is no longer supported.

If you are upgrading from v2 API config you may wish to view the v2 API documentation:

    :ref:`config/filter/http/aws_request_signing/v2alpha/aws_request_signing.proto <v1.17:envoy_api_file_envoy/config/filter/http/aws_request_signing/v2alpha/aws_request_signing.proto>`



.. _extension_envoy.filters.http.aws_request_signing:

This extension may be referenced by the qualified name ``envoy.filters.http.aws_request_signing``

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.http <extension_category_envoy.filters.http>`

AwsRequestSigning :ref:`configuration overview <config_http_filters_aws_request_signing>`.

.. _envoy_v3_api_msg_extensions.filters.http.aws_request_signing.v3.AwsRequestSigning:

extensions.filters.http.aws_request_signing.v3.AwsRequestSigning
----------------------------------------------------------------

:repo:`[extensions.filters.http.aws_request_signing.v3.AwsRequestSigning proto] <api/envoy/extensions/filters/http/aws_request_signing/v3/aws_request_signing.proto#L22>`

Top level configuration for the AWS request signing filter.

.. code-block:: json

  {
    "service_name": "...",
    "region": "...",
    "host_rewrite": "...",
    "use_unsigned_payload": "...",
    "match_excluded_headers": []
  }

.. _envoy_v3_api_field_extensions.filters.http.aws_request_signing.v3.AwsRequestSigning.service_name:

service_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The `service namespace
  <https://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html#genref-aws-service-namespaces>`_
  of the HTTP endpoint.
  
  Example: s3
  
  
.. _envoy_v3_api_field_extensions.filters.http.aws_request_signing.v3.AwsRequestSigning.region:

region
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The `region <https://docs.aws.amazon.com/general/latest/gr/rande.html>`_ hosting the HTTP
  endpoint.
  
  Example: us-west-2
  
  
.. _envoy_v3_api_field_extensions.filters.http.aws_request_signing.v3.AwsRequestSigning.host_rewrite:

host_rewrite
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that before signing headers, the host header will be swapped with
  this value. If not set or empty, the original host header value
  will be used and no rewrite will happen.
  
  Note: this rewrite affects both signing and host header forwarding. However, this
  option shouldn't be used with
  :ref:`HCM host rewrite <envoy_v3_api_field_config.route.v3.RouteAction.host_rewrite_literal>` given that the
  value set here would be used for signing whereas the value set in the HCM would be used
  for host header forwarding which is not the desired outcome.
  
  
.. _envoy_v3_api_field_extensions.filters.http.aws_request_signing.v3.AwsRequestSigning.use_unsigned_payload:

use_unsigned_payload
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Instead of buffering the request to calculate the payload hash, use the literal string ``UNSIGNED-PAYLOAD``
  to calculate the payload hash. Not all services support this option. See the `S3
  <https://docs.aws.amazon.com/AmazonS3/latest/API/sig-v4-header-based-auth.html>`_ policy for details.
  
  
.. _envoy_v3_api_field_extensions.filters.http.aws_request_signing.v3.AwsRequestSigning.match_excluded_headers:

match_excluded_headers
  (**repeated** :ref:`type.matcher.v3.StringMatcher <envoy_v3_api_msg_type.matcher.v3.StringMatcher>`) A list of request header string matchers that will be excluded from signing. The excluded header can be matched by
  any patterns defined in the StringMatcher proto (e.g. exact string, prefix, regex, etc).
  
  Example:
  match_excluded_headers:
  - prefix: x-envoy
  - exact: foo
  - exact: bar
  When applied, all headers that start with "x-envoy" and headers "foo" and "bar" will not be signed.
  
  

